--- a/BookStore/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/BookStore/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -42,8 +42,8 @@
 	<header id="header" class="header fixed-top d-flex align-items-center justify-content-between">
 		<div class="d-flex align-items-center justify-content-between">
 			<a asp-controller="Dashboard" asp-action="Index" class="logo d-flex align-items-center">
-				<img src="~/img/logo.png" alt="">
-				<span class="d-none d-lg-block">Book WonderLand</span>
+				<img src="~/img/logo/logo.png" alt="">
+				@* <span class="d-none d-lg-block">Book WonderLand</span> *@
 			</a>
 			<i class="bi bi-list toggle-sidebar-btn"></i>
 		</div><!-- End Logo -->
@@ -72,7 +72,7 @@
 				</li><!-- End Notification Nav -->
 				
 				<form id="logoutForm" class="nav-link form-inline ml-2" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-					<button id="logout" type="submit" class="nav-link btn btn-link">Logout</button>
+					<button id="logout" type="submit" class="nav-link btn btn-link btn-danger" style="color: white">Logout</button>
 				</form>
 
 			</ul>
@@ -98,7 +98,10 @@
                         <a asp-controller="Genres" asp-action="Index"><i class="bi bi-circle"></i><span>Genres</span></a>
                     </li>
                     <li>
-                        <a asp-controller="Users" asp-action="Index"><i class="bi bi-circle"></i><span>Users</span></a>
+                        <a asp-controller="Users" asp-action="Index"><i class="bi bi-circle"></i><span>StoreOwner</span></a>
+                    </li>
+					<li>
+						<a asp-controller="Customers" asp-action="Index"><i class="bi bi-circle"></i><span>Customer</span></a>
                     </li>
                 </ul>
             </li><!-- End Tables Nav -->
