--- a/BookStore/Views/Home/Index.cshtml
+++ b/BookStore/Views/Home/Index.cshtml
@@ -127,19 +127,19 @@
 		<div class="row">
 			<div class="col-md-4" id="theBestAuthor">
 				<div class="writer-wrapper">
-					<a href="/Home/Detail/@Model.topAuthors[0].BookId">
+@* 					<a href="/Home/Detail/@Model.topAuthors[0].BookId">
 						<img src="~/img/product/book/@Model.topAuthors[0].BookImage" alt="">
-					</a>
+					</a> *@
 					<div class="writer-content">
 						<input type="hidden" id="quantity" runat="server" value="1">
-						<h4>@Model.topAuthors[0].BookTitle</h4>
-						<span>@Model.topAuthors[0].AuthorName</span>
+						@* <h4>@Model.topAuthors[0].BookTitle</h4>
+						<span>@Model.topAuthors[0].AuthorName</span> *@
 					</div>
 					<div class="product-rating-2" style="display: flex; justify-content:center; align-items:center;">
-						@for (int i = 0; i < Model.topAuthors[0].ReviewRate; i++)
+					@* 	@for (int i = 0; i < Model.topAuthors[0].ReviewRate; i++)
 						{
 							<i class="ti-star"></i>
-						}
+						} *@
 					</div>
 				</div>
 			</div>
