Finish update account of store owner and clients in Admin

--- a/BookStore/Areas/Owner/Views/Discounts/Index.cshtml
+++ b/BookStore/Areas/Owner/Views/Discounts/Index.cshtml
@@ -77,7 +77,7 @@
                                 </div>
                             </div>
                         </div>
-                        <table class="table table-sm table-hover">
+                        <table class="table table-sm table-hover" id="discountTable">
                             <thead>
                                 <tr>
                                     <th scope="col">ID</th>
