--- a/BookStore/Areas/Owner/Views/Authors/Index.cshtml
+++ b/BookStore/Areas/Owner/Views/Authors/Index.cshtml
@@ -69,7 +69,7 @@
                             </div>
                         </div>
                         <!-- Small tables -->
-                        <table class="table table-sm table-hover">
+                        <table class="table table-sm table-hover" id="authorTable">
                             <thead>
                                 <tr >
                                     <th scope="col">ID</th>
@@ -79,6 +79,9 @@
                                 </tr>
                             </thead>
                             <tbody id="authorList">
+                                <div id="noResultsMessage" class="alert alert-warning" style="display: none;">
+                                    No available values found.
+                                </div>
                                 @foreach (var author in Model)
                                 {
                                     <tr id="row_@author.Id">
