--- a/BookStore/Views/Home/Detail.cshtml
+++ b/BookStore/Views/Home/Detail.cshtml
@@ -2,6 +2,8 @@
 @{
 	ViewData["Title"] = "Product Detail";
 }
+
+
 <div class="product-details ptb-100 pb-90">
 	<div class="container">
 		<div class="row">
@@ -62,9 +64,9 @@
 					<p>@Model.Description</p>
 					<div class="quickview-plus-minus">
 						<div class="cart-plus-minus">
-                            <div class="inc qtybutton">+</div>
+							<div class="inc qtybutton">+</div>
 							<input type="text" value="02" name="qtybutton" id="quantity" class="cart-plus-minus-box">
-							<div class="inc qtybutton">-</div>			
+							<div class="inc qtybutton">-</div>
 						</div>
 						<div class="quickview-btn-cart">
 							<a class="btn-hover-black" onclick="AddToCart(@Model.Id)">add to cart</a>
@@ -112,8 +114,10 @@
 @* //FORM POPUP *@
 <div class="container">
 	<div class="box-comment">
-		<h2>Leave your comments here</h2>
+
 		<form method="POST" id="reviewForm">
+			<h2>Leave your comments here</h2>
+			<input type="hidden" id="bookId" value="@Model.Id">
 			<div class="mb-3">
 				<label for="comment" class="form-label">Comment</label>
 				<textarea class="form-control" id="comment" rows="3"></textarea>
@@ -121,11 +125,11 @@
 			<div class="mb-3">
 				<label for="rate" class="form-label">Rate</label><br>
 				<div class="rating">
-					<i class="fas fa-star" data-rating="5"></i>
-					<i class="fas fa-star" data-rating="4"></i>
-					<i class="fas fa-star" data-rating="3"></i>
-					<i class="fas fa-star" data-rating="2"></i>
 					<i class="fas fa-star" data-rating="1"></i>
+					<i class="fas fa-star" data-rating="2"></i>
+					<i class="fas fa-star" data-rating="3"></i>
+					<i class="fas fa-star" data-rating="4"></i>
+					<i class="fas fa-star" data-rating="5"></i>
 				</div>
 				<input type="hidden" name="rating" id="selectedRating" value="">
 			</div>
@@ -133,22 +137,21 @@
 		</form>
 	</div>
 </div>
-
 <style>
 	.rating .fas.fa-star.selected {
 		color: gold;
 	}
 
-	.box-comment{
+	.box-comment {
 		/* border: #7D7C7C 1px solid; */
 		border-radius: 8px;
 		padding: 10px;
 		margin-bottom: 40px;
 	}
 
-	.review-section{
-		text-align:left;
-		justify-content:start;
+	.review-section {
+		text-align: left;
+		justify-content: start;
 	}
 
 	.review {
@@ -156,61 +159,38 @@
 		padding-bottom: 10px; /* Khoảng cách dưới của mỗi bài đánh giá */
 	}
 
-	.submit-commen{
+	.submit-commen {
 		margin: 10px;
 		border-radius: 8px !important;
 		background-color: #050035;
 	}
+
 </style>
 @* END FORM POPUP *@
 <div class="product-description-review-area pb-90">
 	<div class="container">
 		<div class="product-description-review text-center">
-			<div class="description-review-title nav" role=tablist>
+			<div class="description-review-title nav" role="tablist">
 				<a href="#pro-review" data-bs-toggle="tab" role="tab" aria-selected="false">
 					Reviews (0)
 				</a>
 			</div>
-
-			<div class="review-section tab-content">
-				<div class="review-display" id="book-review" role="tabpanel">
+			<div class="review-section tab-content" id="book-review">
+				<div class="review-display" role="tabpanel">
 					<div class="review">
 						<div class="user-comment">
-							<div class="user-name">Your Name 1</div>
-							<div class="star-rating" data-rating="2"></div> @* Điền value 1,2,3,4,5 từ csdl vào data-rating *@
-							<p>Your comment goes here. Lorem</p>
+							<div class="user-name">Datng</div>
+							<div class="star-rating" data-rating="4"></div>
+							<p>ABC</p>
 						</div>
-						<div class="review-date">October 17, 2023</div>
-					</div>
-				</div>
-			</div>
-			<div class="review-section tab-content">
-				<div class="review-display" id="book-review" role="tabpanel">
-					<div class="review">
-						<div class="user-comment">
-							<div class="user-name">Your Name 2</div>
-							<div class="star-rating" data-rating="3"></div> @* Điền value 1,2,3,4,5 từ csdl vào data-rating *@
-							<p>Your comment goes here. Lorem</p>
-						</div>
-						<div class="review-date">October 17, 2023</div>
-					</div>
-				</div>
-			</div>
-			<div class="review-section tab-content">
-				<div class="review-display" id="book-review" role="tabpanel">
-					<div class="review">
-						<div class="user-comment">
-							<div class="user-name">Your Name 3</div>
-							<div class="star-rating" data-rating="5"></div>
-							<p>Your comment goes here. Lorem</p>
-						</div>
-						<div class="review-date">October 17, 2023</div>
+						<div class="review-date">ABC</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
 </div>
+
 <!-- product area start -->
 <div class="product-area pb-95">
 	<div class="container">
