--- a/BookStore/Views/Home/Shop.cshtml
+++ b/BookStore/Views/Home/Shop.cshtml
@@ -130,7 +130,7 @@
 												<div class="product-wrapper mb-30">
 													<div class="product-img">
 														<a asp-controller="Home" asp-action="Detail" asp-route-id="@book.Id">
-															<img src="/img/product/book/@book.Image" alt="">
+															<img src="@ViewBag.api/@book.Image" alt="">
 														</a>
 														<div class="product-action">
 															<a class="animate-left" title="Wishlist" href="#">
